--- a/package.json
+++ b/package.json
@@ -2,20 +2,32 @@
   "name": "voice",
   "version": "0.1.0",
   "private": true,
+   "homepage": "https://github.com/Mdarish120/arish.git",
   "dependencies": {
+    "@alan-ai/alan-sdk-web": "^1.8.27",
+    "@material-ui/core": "^4.12.2",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "classnames": "^2.3.1",
+    "is-color": "^1.0.2",
+    "randomcolor": "^0.6.2",
     "react": "^17.0.2",
+    "react-copy-to-clipboard": "^5.0.3",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
-    "web-vitals": "^1.1.2"
+    "value-js": "^1.0.0",
+    "values.js": "^2.0.0",
+    "web-vitals": "^1.1.2",
+    "words-to-numbers": "^1.5.1"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+     "predeploy":"npm run build",
+     "deploy":"gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -34,5 +46,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^3.2.3"
   }
 }
