--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "voice",
   "version": "0.1.0",
   "private": true,
-   "homepage": "https://github.com/Mdarish120/arish.git",
+  "homepage": "https://Mdarish120.github.io/arish",
   "dependencies": {
     "@alan-ai/alan-sdk-web": "^1.8.27",
     "@material-ui/core": "^4.12.2",
@@ -26,8 +26,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-     "predeploy":"npm run build",
-     "deploy":"gh-pages -d build"
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
